# finops

./: .gitignore  README.md  prompts.md  pyproject.toml  run.sh
.claude/: settings.local.json
app/: __init__.py  config.py  db.py  main.py  models.py  reset.py  seed.py
app/ai/: __init__.py  chat.py  tools.py
app/api/: routes_chat.py  routes_dashboard.py  routes_detect.py  routes_export.py  routes_findings.py  routes_ingest.py  routes_ingestions.py  routes_released.py  routes_resources.py  routes_rules.py
app/dashboard/templates/: _macros.html  base.html  index.html  ingestion_detail.html  ingestions.html  inventory.html  released.html  resource_detail.html  rules.html
app/detectors/: __init__.py  base.py  idle_eip_billing.py  idle_lb.py  idle_vm.py  old_snapshot.py  orphan_disk.py  registry.py  unassociated_eip.py  unmonitored_long_running.py
app/ingest/: __init__.py  aws.py  azure.py  infer.py  loader.py  schema.py  stream.py
app/remediation/: __init__.py  aws_cli.py  azure_cli.py
samples/: aws_cur_history_sample.csv  aws_cur_sample.csv  aws_inventory_sample.json  azure_export_sample.json  azure_inventory_sample.json  inventory_with_warnings_sample.json
tests/: conftest.py  test_api.py  test_chat.py  test_detectors.py  test_ingest.py  test_reset.py
