[project]
name = "cost-optimizer"
version = "0.1.0"
description = "API-first FinOps engine: ingests AWS/Azure billing + inventory, detects orphaned/idle resources, generates remediation CLI commands."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "sqlalchemy>=2.0.35",
    "pandas>=2.2.3",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.2",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
]

[project.scripts]
cost-optimizer-reset = "app.reset:main"
cost-optimizer-seed = "app.seed:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
